k8s/manifest/Prometheus-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
