k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
spec:
  selector:
    app: fitness
  ports:
    - protocol: TCP
      port: 80 # Exposed port on the service
      targetPort: 8080 # Port your app listens to in the container
  type: LoadBalancer # For cloud environments (for external access)
